--- a/american_home.html
+++ b/american_home.html
@@ -13,20 +13,24 @@
             <li><button onclick="staff()">Staff</button></li>
             <li><button onclick="tolls()">Tolls</button></li>
         </menu>
+     
         <h2>First B787-800 ACK Drill</h2>
-        <img src="american_pictures\1° B787 Ack.jpg" alt="B787 Drill Picture" 
-            width=" 650" height="500">
+        <div class= "figure">
+        <img src="american_pictures\1° B787 Ack.jpg" alt="B787 Drill Picture" height= "400px"; >
         <p> The first B787-800 A Check Drill happened in 24 may 2017 
-            and was composed by 23 AMT's</p>
-        <ol>
+            and was composed by 23 AMT's </p>
+        </div>
+        <ol><strong>
             <li>Roberto Lencione</li>
             <li>Renato Gomes</li>
-            <li>Renildo</li>
+            <li>Renildo</li>a
             <li>Adelino Peters</li>
             <li>Leandro</li>
             <li>Eliane Costa</li>
             <li>Nelson Mari</li>
             <li>Vagner vasques</li>
+        </strong>
         </ol>
     </body>
+
 </html>
