--- a/AA_briefing.html
+++ b/AA_briefing.html
@@ -66,9 +66,32 @@
     <marquee><p>TODAY!!! Safety Minut Briefing:</p><p id= "red">Something I've had to be aware...</p></marquee>
     </div>
 
-    <div id="image">
-        <img src="american_pictures\Safety_breifing.jpeg" width="1000px">
+  
+    <main>
+        <div id="brf_1">
+            <span class="gru">GRU</span><img id="img_1" src="american_pictures\Logo_AA.jpg" width="200px"><span class="es">Employee Safety</span>
+            <div id="safety_1">
+                <h1 class=" sm">Safety Minute</h1>
+                <p id="text_1">For today’s Safety Minute, I want to talk about Hand Safety and Injury Prevention. Before I worked at American Airlines as an engineer, being hired 4 months before 9/11, I used to be a Master Glass Technician, and I worked with and around many very sharp and dangerous things that exist in a glass shop work environment. During my 9 years working in that profession, I witnessed and learned that wearing hand protection was an absolute necessity to perform almost every aspect of my job when handling glass of all types in a safe and efficient manner.​Bureau of Labor Statistics reported in 2011 that over 183,400 hand-related injuries occurred on the job​A whopping 70% of those victims WERE NOT wearing protective gloves​30% WERE wearing gloves, but the gloves were either ill-fitting or the wrong type for the job​Ohio Bureau of Workers’ Compensation report 30% of all workplace injuries involve cuts or lacerations, and approximately ​70% of those are to the hands or fingers – 10% of all U.S. emergency-room visits by workers per year are from hand injuries (~3.9M/yr)​Best Practices to Follow: ​Use the right tool for the job – Inspect it thoroughly before starting work​Make sure blades are sharp – Sharp blades require LESS force to use, thereby reducing the risk of an incident/accident ​70% of a jobs risk can be lowered by making sure that WE wear the proper gloves for each job we perform (ref. some types of gloves below)​Neoprene, Nitrile, Latex, Vinyl, Leather, Cotton Fabric, Metal Mesh, Kevlar, Tough Synthetic Yarn, Waterproof, Non-Conductive, Heat Resistant​Important Manual References (if applicable): GPM 13.01.10 Protective Equipment List</p>
+            </div>
+        </div>
+
+        <div id="brf_2"></div>
+            <span class="gru">GRU</span><img src="american_pictures\Logo_AA.jpg" width="200px"><span class="es">Employee Safety</span>
+                <div id="safety_2">
+                    <h1 class=" sm">Safety Minute</h1>
+                    <p></p>
+                </div>
+        </div>
+
+        <div id="brf_3"></div>
+        <span class="gru">GRU</span><img src="american_pictures\Logo_AA.jpg" width="200px"><span class="es">Employee Safety</span>
+        <div id="safety_3">
+            <h1 class=" sm">Safety Minute</h1>
+            <p></p>
+        </div>
     </div>
+        </main>
        
 </body>
 </html>
