--- a/AA_briefing.html
+++ b/AA_briefing.html
@@ -63,35 +63,91 @@
     </div>   
 
     <div id="animation">
-    <marquee><p>TODAY!!! Safety Minut Briefing:</p><p id= "red">Something I've had to be aware...</p></marquee>
+    <marquee><p>TODAY!!! Safety Minut Briefing:</p><p id= "red">Hand Safety and Injury Prevention...Talk about fuel spills</p></marquee>
     </div>
 
-  
     <main>
         <div id="brf_1">
-            <span class="gru">GRU</span><img id="img_1" src="american_pictures\Logo_AA.jpg" width="200px"><span class="es">Employee Safety</span>
+            <span id="gru_1">GRU</span>
+            <img id="img_1" src="american_pictures\Logo_AA.jpg" width="200px">
+            <span id="es_1">Employee Safety</span>
             <div id="safety_1">
-                <h1 class=" sm">Safety Minute</h1>
-                <p id="text_1">For today’s Safety Minute, I want to talk about Hand Safety and Injury Prevention. Before I worked at American Airlines as an engineer, being hired 4 months before 9/11, I used to be a Master Glass Technician, and I worked with and around many very sharp and dangerous things that exist in a glass shop work environment. During my 9 years working in that profession, I witnessed and learned that wearing hand protection was an absolute necessity to perform almost every aspect of my job when handling glass of all types in a safe and efficient manner.​Bureau of Labor Statistics reported in 2011 that over 183,400 hand-related injuries occurred on the job​A whopping 70% of those victims WERE NOT wearing protective gloves​30% WERE wearing gloves, but the gloves were either ill-fitting or the wrong type for the job​Ohio Bureau of Workers’ Compensation report 30% of all workplace injuries involve cuts or lacerations, and approximately ​70% of those are to the hands or fingers – 10% of all U.S. emergency-room visits by workers per year are from hand injuries (~3.9M/yr)​Best Practices to Follow: ​Use the right tool for the job – Inspect it thoroughly before starting work​Make sure blades are sharp – Sharp blades require LESS force to use, thereby reducing the risk of an incident/accident ​70% of a jobs risk can be lowered by making sure that WE wear the proper gloves for each job we perform (ref. some types of gloves below)​Neoprene, Nitrile, Latex, Vinyl, Leather, Cotton Fabric, Metal Mesh, Kevlar, Tough Synthetic Yarn, Waterproof, Non-Conductive, Heat Resistant​Important Manual References (if applicable): GPM 13.01.10 Protective Equipment List</p>
+                <h1 id="sm_1">Safety Minute</h1>
+                <p id="text_1">For today’s Safety Minute, I want to talk about Hand Safety and Injury Prevention. 
+                            Before I worked at American Airlines as an engineer, being hired 4 months before 9/11, 
+                            I used to be a Master Glass Technician, and I worked with and around many very sharp 
+                            and dangerous things that exist in a glass shop work environment. During my 9 years 
+                            working in that profession, I witnessed and learned that wearing hand protection was 
+                            an absolute necessity to perform almost every aspect of my job when handling glass of 
+                            all types in a safe and efficient manner.​Bureau of Labor Statistics reported in 2011 
+                            that over 183,400 hand-related injuries occurred on the job​A whopping 70% of those 
+                            victims WERE NOT wearing protective gloves​30% WERE wearing gloves, but the gloves were 
+                            either ill-fitting or the wrong type for the job​Ohio Bureau of Workers’ Compensation 
+                            report 30% of all workplace injuries involve cuts or lacerations, and approximately ​70% 
+                            of those are to the hands or fingers – 10% of all U.S. emergency-room visits by workers 
+                            per year are from hand injuries (~3.9M/yr)​Best Practices to Follow: ​Use the right tool 
+                            for the job – Inspect it thoroughly before starting work​Make sure blades are sharp – Sharp
+                            blades require LESS force to use, thereby reducing the risk of an incident/accident ​70%
+                            of a jobs risk can be lowered by making sure that WE wear the proper gloves for each
+                            job we perform (ref. some types of gloves below)​Neoprene, Nitrile, Latex, Vinyl, Leather,
+                            Cotton Fabric, Metal Mesh, Kevlar, Tough Synthetic Yarn, Waterproof, Non-Conductive, Heat 
+                            Resistant​Important Manual References (if applicable): GPM 13.01.10 Protective Equipment List.
+                        </p>
             </div>
         </div>
 
         <div id="brf_2"></div>
-            <span class="gru">GRU</span><img src="american_pictures\Logo_AA.jpg" width="200px"><span class="es">Employee Safety</span>
+            <span id="gru_2">GRU</span>
+            <img id="img_2" src="american_pictures\Logo_AA.jpg" width="200px">
+            <span id="es_2">Employee Safety</span>
                 <div id="safety_2">
-                    <h1 class=" sm">Safety Minute</h1>
-                    <p></p>
+                    <h1 id="sm_2">Safety Minute</h1>
+                    <p id="text_2">
+                        For today’s Safety Minute, I want to talk about fuel spills. Recently my station was involved in a known
+                        material spill (jet fuel) on the ramp outside of the maintenance hangar. While accomplishing aircraft defuel
+                        operations, it was noticed by maintenance personnel that fuel was pouring out of the top of the fueling truck,
+                        the defuel operation was halted and local management was notified. The local fire department was called and
+                        determined that the total amount of fuel lost was less than 20 gallons. Our maintenance people quickly
+                        gathered supplies from the spill kit located inside the hangar and, using proper PPE, contained the spill,
+                        preventing any contamination into the local storm drains. The clean-up materials were stored in an
+                        appropriate waste container and local management contacted the Department Environmental Coordinator
+                        for assistance with the containers. Reference your local spill response plan and the American Airlines
+                        Environmental Management Manual (EMM) sections 03.01- 03.08 for guidelines on how to respond to spills.
+                        As per EMM section 03.01, it is the policy of American Airlines to respond to spills in an efficient and economic
+                        manner, while ensuring the safety of its employees, passengers, facilities and the surrounding environment.
+                        The quick actions by maintenance and local management shared in the story above prove that having a spill
+                        response plan in place prevented employee injury, aircraft/equipment damage and prevented any adverse
+                        impact to the local environment.
+                    </p>
                 </div>
         </div>
 
         <div id="brf_3"></div>
-        <span class="gru">GRU</span><img src="american_pictures\Logo_AA.jpg" width="200px"><span class="es">Employee Safety</span>
+        <span id="gru_3">GRU</span>
+        <img id="img_3" src="american_pictures\Logo_AA.jpg" width="200px">
+        <span id="es_3">Employee Safety</span>
         <div id="safety_3">
-            <h1 class=" sm">Safety Minute</h1>
-            <p></p>
+            <h1 id="sm_3">Safety Minute</h1>
+            <p id="text_3">
+                Do you have Emergency Procedures for the elevators in your building? If you work in an older building is your
+                elevator up to code? For today's safety minute I'd like to discuss Elevator Safety. There recently wasn an injury
+                within Base Maintenance due to an elevator being stuck between floors. When the elevator stopped the
+                employee opened the emergency phone to call security to find that the phone had been removed. Panic set
+                in and the employee tried to pry the doors open injuring their shoulder trying to escape. It's important all
+                team members know what to do if youfind yourself in this situation without a cell phone or two-way
+                communication: *First press the alarm button to get the attention of others that the elevator has stopped.
+                *Stay calm and try to not panic and wait until assistances in on their way *Do not try to pry open the doors
+                and climb out. ASME A17.1 Safety Code for elevators reads: two - way communication means between the car
+                and a location staffed by authorized personnel shall be provided. Door restrictors are devices that prevent
+                passengers from opening the elevator doors if the elevator stops between floors. Tragic accidents can occur
+                when passengers attempt to exit the car and leap to the landing. Passengers need to stay in the elevator until
+                trained personnel arrive to remove them safetly. The elevator maintenance service companies have the sole
+                responsibility of maintaining and servicing the elevators in a safe and efficient manner. Scheduled inspections,
+                tests, and quick response on repairs are specificed in the service contracts.
+            </p>
+            </div>
         </div>
-    </div>
-        </main>
+    </main>
        
 </body>
 </html>
