--- a/AA_briefing_test.html
+++ b/AA_briefing_test.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel= "stylesheet" href= "American css\AAbriefing.css">
+    <link rel= "stylesheet" href= "American css\AAbriefing_test.css">
     <link rel="stylesheet" href="American css\reset.css">
     <title>GRU_AA</title>
 </head>
 <body> 
-
+<header>
     <body id="charge" onload="clockRun ()"></body>
         
    <!--<ul>
@@ -67,6 +67,7 @@
     <marquee><p>TODAY!!! Safety Minut Briefing:</p><p id= "red">SEE Something, SAY Something, 
         SAVE Something:...I want to talk about Ground to Flight Deck Communication...
         Do you have Emergency Procedures for the elevators?</p></marquee>
+    </header>
     
 </div>
     <div id="body_2">
